Add - factory( AddTaskViewModelFactory ) , adapter( TaskAdapter ) , holder( TaskViewHolder ) , view_Activity(AddTaskActivity , MainActivity(수정)) , view_model( AddTaskViewModel ) , layout( activity_add_task )

--- a/TodoList/app/src/main/res/layout/activity_main.xml
+++ b/TodoList/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+    This layout defines the main activity screen and displays a listtaskEntriesasks (if they exist),
+    and a floating action button that launches another activity.
+-->
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.view_activity.MainActivity">
+    android:layout_height="match_parent">
 
     <!-- RecyclerView that is responsible for holding a listtaskEntrytask data -->
     <android.support.v7.widget.RecyclerView
@@ -22,9 +24,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:layout_constraintBottom_toBottomOf="@id/recyclerViewTasks"
-        app:layout_constraintRight_toRightOf="@id/recyclerViewTasks"
         android:tint="@android:color/white"
         app:srcCompat="@android:drawable/ic_input_add" />
 
-</android.support.constraint.ConstraintLayout>
+</FrameLayout>
+
