--- a/TodoList/app/src/main/res/layout/layout_task.xml
+++ b/TodoList/app/src/main/res/layout/layout_task.xml
@@ -23,7 +23,7 @@
             style="@style/TextAppearance.AppCompat.Medium"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/primary_text_light"
+            android:textColor="@android:color/background_light"
             tools:text="Description" />
 
         <!-- TextView that displays the update date -->
@@ -32,7 +32,7 @@
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/primary_text_light"
+            android:textColor="@android:color/background_light"
             tools:text="11/11/1111" />
 
     </LinearLayout>
@@ -43,12 +43,12 @@
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:background="@drawable/priority_circle"
         android:gravity="center"
         android:textAlignment="center"
-        android:textColor="@android:color/primary_text_light"
+        android:textColor="@android:color/background_light"
         tools:text="1" />
 
 </LinearLayout>
