--- a/TodoList/app/src/main/res/layout/activity_add_task.xml
+++ b/TodoList/app/src/main/res/layout/activity_add_task.xml
@@ -3,88 +3,116 @@
     This includes an EditText to adtaskEntrytask description, and buttons to select a priority
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingEnd="@dimen/activity_horizontal_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingStart="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:background="@color/colorPrimaryDark"
+    android:orientation="vertical">
 
     <!-- EditText for getttaskEntrytask description input -->
-    <EditText
-        android:id="@+id/editTextTaskDescription"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="start"
-        android:hint="@string/edit_task_description"
-        android:paddingBottom="@dimen/activity_horizontal_margin" />
+        android:background="@color/colorPrimaryLight"
+        android:orientation="horizontal"
+        android:padding="6dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/task_edit"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/editTextTaskDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@drawable/task_edit"
+                android:gravity="start"
+                android:hint="@string/edit_task_description"
+                android:paddingLeft="6dp"
+                android:paddingTop="16dp"
+                android:paddingBottom="@dimen/activity_horizontal_margin"
+                android:textColor="@color/colorPrimaryDark"
+                android:textColorHint="@color/colorPrimaryLight" />
+
+            <Button
+                android:id="@+id/saveButton"
+                style="@style/TextAppearance.AppCompat.Large"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_weight="3"
+                android:background="@drawable/task_edit_apply"
+                android:text="@string/add_button"
+                android:textColor="@android:color/primary_text_dark"
+                android:textSize="14sp" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingStart="@dimen/activity_horizontal_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingEnd="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/task_edit"
+            android:orientation="horizontal">
+
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:orientation="horizontal"
+                android:weightSum="3">
+
+                <RadioButton
+                    android:id="@+id/radButton1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/HighColor"
+                    android:checked="true"
+                    android:text="@string/high_priority"
+                    android:theme="@style/WhiteRadioButton" />
+
+                <RadioButton
+                    android:id="@+id/radButton2"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/MediumColor"
+                    android:text="@string/med_priority"
+                    android:theme="@style/WhiteRadioButton" />
+
+                <RadioButton
+                    android:id="@+id/radButton3"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/LowColor"
+                    android:text="@string/low_priority"
+                    android:theme="@style/WhiteRadioButton" />
+
+            </RadioGroup>
+        </LinearLayout>
+
+    </LinearLayout>
 
     <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
-    <TextView
-        style="@style/TextAppearance.AppCompat.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/priority_string"
-        android:textColor="@android:color/primary_text_light" />
 
-        <!-- RadioGroup for visible selection of a priority -->
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="@dimen/activity_horizontal_margin"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
-            <RadioButton
-                android:id="@+id/radButton1"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/materialRed"
-                android:checked="true"
-                android:text="@string/high_priority"
-                android:textColor="@android:color/background_light"
-                android:theme="@style/WhiteRadioButton" />
-
-            <RadioButton
-                android:id="@+id/radButton2"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/materialOrange"
-                android:text="@string/med_priority"
-                android:textColor="@android:color/background_light"
-                android:theme="@style/WhiteRadioButton" />
-
-            <RadioButton
-                android:id="@+id/radButton3"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/materialYellow"
-                android:text="@string/low_priority"
-                android:textColor="@android:color/background_light"
-                android:theme="@style/WhiteRadioButton" />
-
-        </RadioGroup>
+    <!-- RadioGroup for visible selection of a priority -->
 
     <!-- Add button -->
-    <Button
-        android:id="@+id/saveButton"
-        style="@style/TextAppearance.AppCompat.Large"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:background="@color/colorPrimary"
-        android:text="@string/add_button"
-        android:textColor="@android:color/primary_text_dark" />
 
 </LinearLayout>
