--- a/TodoList/app/src/main/res/layout/layout_task.xml
+++ b/TodoList/app/src/main/res/layout/layout_task.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/background_light"
+            android:textSize="14sp"
             tools:text="Description" />
 
         <!-- TextView that displays the update date -->
@@ -32,7 +33,9 @@
             style="@style/TextAppearance.AppCompat.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
             android:textColor="@android:color/background_light"
+            android:textSize="10sp"
             tools:text="11/11/1111" />
 
     </LinearLayout>
@@ -40,8 +43,8 @@
     <TextView
         android:id="@+id/priorityTextView"
         style="@style/TextAppearance.AppCompat.Small"
-        android:layout_width="22dp"
-        android:layout_height="22dp"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
         android:layout_gravity="center"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
@@ -49,7 +52,7 @@
         android:gravity="center"
         android:textAlignment="center"
         android:textColor="@android:color/background_light"
-        tools:text="1" />
+        android:textSize="8sp" />
 
 </LinearLayout>
 
