Add delete All Tasks , ColorList , CustomToast

--- a/TodoList/app/src/main/res/layout/activity_color_set.xml
+++ b/TodoList/app/src/main/res/layout/activity_color_set.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryLight"
     android:orientation="vertical"
     tools:context="com.junhyeoklee.todolist.ui.SettingColorActivity">
 
@@ -11,5 +12,5 @@
         android:id="@+id/team_color_set_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/background_light" />
+        android:background="@color/colorPrimaryLight" />
 </LinearLayout>
