--- a/TodoList/app/src/main/res/layout/activity_color_set_recyclerview.xml
+++ b/TodoList/app/src/main/res/layout/activity_color_set_recyclerview.xml
@@ -2,22 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/layout_team_color_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="39dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
         android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/img_team_color_set_recyclerview"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="16dp"
+            android:layout_margin="16dp"
+            android:layout_weight="1"
             android:background="@android:color/holo_red_dark"
             android:orientation="vertical">
 
@@ -25,10 +26,10 @@
 
         <TextView
             android:id="@+id/tv_team_color_set_recyclerview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginStart="72dp"
+            android:layout_weight="2"
             android:gravity="center"
             android:text="Red"
             android:textColor="@color/colorPrimaryDark"
@@ -37,7 +38,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="1dp"
         android:background="@color/light_gray"
         android:orientation="vertical"></LinearLayout>
 
