--- a/TodoList/app/src/main/res/layout/layout_task.xml
+++ b/TodoList/app/src/main/res/layout/layout_task.xml
@@ -3,56 +3,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:paddingBottom="8dp"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="8dp"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingBottom="8dp"
     tools:context="com.junhyeoklee.todolist.ui.view_activity.MainActivity">
 
     <!-- A priority circle that is colored in programmatically in the adapter code -->
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        <!-- TextView that displays the description -->
-        <TextView
-            android:id="@+id/taskDescription"
-            style="@style/TextAppearance.AppCompat.Medium"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/background_light"
-            android:textSize="14sp"
-            tools:text="Description" />
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-        <!-- TextView that displays the update date -->
+            <!-- TextView that displays the description -->
+            <TextView
+                android:id="@+id/taskDescription"
+                style="@style/TextAppearance.AppCompat.Medium"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/background_light"
+                android:textSize="14sp"
+                tools:text="Description" />
+
+            <!-- TextView that displays the update date -->
+            <TextView
+                android:id="@+id/taskUpdatedAt"
+                style="@style/TextAppearance.AppCompat.Small"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:textColor="@android:color/background_light"
+                android:textSize="10sp"
+                tools:text="11/11/1111" />
+
+        </LinearLayout>
+
         <TextView
-            android:id="@+id/taskUpdatedAt"
+            android:id="@+id/priorityTextView"
             style="@style/TextAppearance.AppCompat.Small"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="12dp"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/priority_circle"
+            android:gravity="center"
+            android:textAlignment="center"
             android:textColor="@android:color/background_light"
-            android:textSize="10sp"
-            tools:text="11/11/1111" />
+            android:textSize="10sp" />
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/priorityTextView"
-        style="@style/TextAppearance.AppCompat.Small"
-        android:layout_width="18dp"
-        android:layout_height="18dp"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:background="@drawable/priority_circle"
-        android:gravity="center"
-        android:textAlignment="center"
-        android:textColor="@android:color/background_light"
-        android:textSize="8sp" />
 
 </LinearLayout>
 
