--- a/TodoList/app/src/main/res/values/colors.xml
+++ b/TodoList/app/src/main/res/values/colors.xml
@@ -12,16 +12,40 @@
     <color name="LowColor">#3385ff</color>
 
     <!-- 배경 색상 -->
-    <color name="PastelYellow">#ffa01e</color>
-    <color name="PastelYellow2">#ffb400</color>
-    <color name="PastelYellow3">#ffcd28</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+    <color name="gray">#e3e3e3</color>
 
-    <color name="Dahong">#ff6e6e</color>
-    <color name="Dahong2">#ff8c8c</color>
-    <color name="Dahong3">#f5aaaa</color>
+    <color name="navilight">#6927ff</color>
+    <color name="navilight2">#837dff</color>
+    <color name="navi">#233142</color>
+    <color name="navi2">#1a3263</color>
+    <color name="blue">#113f67</color>
+    <color name="blue2">#34699a</color>
+    <color name="blue3">#408ab4</color>
+    <color name="green3">#65c6c4</color>
+    <color name="green">#5dc0a6</color>
+    <color name="green2">#3f8f8d</color>
+    <color name="green4">#436e4f</color>
+    <color name="green5">#5e8b6f</color>
+    <color name="pastelYellow">#ffa01e</color>
+    <color name="pastelYellow4">#fa8f4d</color>
+    <color name="pastelYellow2">#ffb400</color>
+    <color name="pastelYellow3">#ffcd28</color>
+    <color name="red">#cb3737</color>
+    <color name="orange">#ee6f57</color>
+    <color name="dahong4">#df0e62</color>
+    <color name="dahong">#ff6e6e</color>
+    <color name="dahong2">#ff8c8c</color>
+    <color name="dahong3">#f5aaaa</color>
+    <color name="pink">#ffd3de</color>
+    <color name="pink2">#f6b8d1</color>
 
-    <color name="PastelPuple">#ad9aee</color>
-    <color name="PastelPuple2">#c1aeee</color>
-    <color name="PastelPuple3">#d5c2ee</color>
+    <color name="pastelPuble4">#3d1860</color>
+    <color name="pastelPuble5">#643579</color>
+    <color name="pastelPuble6">#bb99cd</color>
+    <color name="pastelPuple">#ad9aee</color>
+    <color name="pastelPuple2">#c1aeee</color>
+    <color name="pastelPuple3">#d5c2ee</color>
 
 </resources>
